@@ -7,8 +7,6 @@ Version 1.3
 -----------
 (in development)
 
-- Gherkin lexer: Fixed single apostrophe bug and added new i18n keywords.
-
 - Lexers added:
 
   * Coldfusion
@@ -16,6 +14,9 @@ Version 1.3
   * R console
   * Objective-J
   * Haml and Sass
+  * Ada
+
+- Gherkin lexer: Fixed single apostrophe bug and added new i18n keywords.
 
 
 Version 1.2.2
